--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,9 @@
 		<junit.version>5.9.3</junit.version>
 		<project.tests.exclude>SlowTest</project.tests.exclude>
 		<native.maven.plugin.version>0.10.3</native.maven.plugin.version>
-		<picocli.version>4.7.6</picocli.version>
+        <picocli.version>4.7.6</picocli.version>
+        <graalpy.version>24.1.0</graalpy.version>
+        <graalpy.edition>python-community</graalpy.edition>
 	</properties>
 	<profiles>
 		<profile>
@@ -91,7 +93,19 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-	<dependencies>
+    <dependencies>
+         <dependency>
+      <groupId>org.graalvm.polyglot</groupId>
+      <artifactId>${graalpy.edition}</artifactId>
+      <version>${graalpy.version}</version>
+      <type>pom</type>
+    </dependency>
+    <dependency>
+      <groupId>org.graalvm.python</groupId>
+      <artifactId>python-embedding</artifactId>
+        <version>${graalpy.version}</version>
+    </dependency>
+
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter</artifactId>
@@ -390,7 +404,31 @@
 	  <tag>HEAD</tag>
   </scm>
 	<build>
-		<plugins>
+        <plugins>
+             <plugin>
+        <groupId>org.graalvm.python</groupId>
+        <artifactId>graalpy-maven-plugin</artifactId>
+        <version>${graalpy.version}</version>
+        <executions>
+          <execution>
+            <configuration>
+              <packages>
+                <package>rdflib==7.1.3</package>
+              </packages>
+              <pythonHome>
+                <includes>
+                  <include>.*</include>
+                </includes>
+                <excludes>
+                </excludes>
+              </pythonHome>
+            </configuration>
+            <goals>
+              <goal>process-graalpy-resources</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.8.1</version>
