--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>swiss.sib.rdf</groupId>
 	<artifactId>sparql-examples-utils</artifactId>
-	<version>2.0.17</version>
+	<version>2.0.18-SNAPSHOT</version>
 	<packaging>jar</packaging>
 	<name>Test and package the sparql examples</name>
 	<description>An simple package to help with managing the sparql examples,
