--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 		<project.tests.exclude>SlowTest</project.tests.exclude>
 		<native.maven.plugin.version>0.10.3</native.maven.plugin.version>
         <picocli.version>4.7.6</picocli.version>
-        <graalpy.version>24.2.2</graalpy.version>
+        <graalpy.version>25.0.0</graalpy.version>
         <graalpy.edition>python-community</graalpy.edition>
 	</properties>
 	<profiles>
@@ -449,7 +449,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.2.4</version>
+				<version>3.5.1</version>
 				<configuration>
 					<filters>
 						<filter>
@@ -473,7 +473,10 @@
 							<shadedClassifierName>uber</shadedClassifierName>
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-								<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <manifestEntries>
+                                        <Multi-Release>true</Multi-Release>
+                                    </manifestEntries>
 									<mainClass>
 										swiss.sib.rdf.sparql.examples.Sparql</mainClass>
 								</transformer>
